everything except flights done

--- a/src/app/history/history.component.html
+++ b/src/app/history/history.component.html
@@ -4,11 +4,54 @@
             <h3>History of the Colony</h3>
         </mat-card-title>
         <mat-card-content>
-            <h5 class="notes">"For this selection, I’m going to have my Advocate tell the tale of what this Colony was like and how it came to be."</h5>
-            <hr>
-            <h5><i>While the Colony’s very creation owes a lot to the first Council, a lot of the credit belongs to a Nimbat known as the Matron, since only a handful knew her actual name. Even today, most claims on her actual name are up for debate, if they’re not refutable! The Matron was a part of the Council as well, but she was a centralizing force, leading the very direction of the Colony while the Council managed their respective Flights. She had a variety of powers, but she specialized mostly in the raw energy of arcane, able to sear off an entire giant’s leg! Back then, our Colony was far more isolated, trying to stay hidden from the outside world as much as possible, save for the instance where a powerful artifact was found in some realm, and someone would need to be sent to either protect it, or collect it. Even though it was a pretty hidden Colony, the system worked, and everyone was able to thrive like we do today, for the most part.</i></h5>
-<h5><i>Except of course, there was no such thing as a Visitant. The issues came when a massive forest fire hit the surrounding region outside the Colony. The barriers and defenses set in place prevented anyone inside from getting harmed, but every so often an outsider would run straight into the barrier seeking shelter and refuge, and there was so much internal debate as to whether or not to help long-term. The Matron and the Council allowed others to take safety within the Colony until the flames were put to rest, but as soon as they were, the outsiders were expected to leave. Those fires didn’t subside until an entire week. People were learning what Nimbats were for the first time, and the Colony was beginning to warm up to them. The first one to break the barrier between those relations was, believe it or not, the Matron! All that’s known is that she was charmed by one of the outsiders after she personally saw to treating their injuries. They apparently hit it off, and they were proud to call themselves loving partners.</i></h5>
-<h5><i>At that point, there was no way the Colony could refuse outsiders anymore. The Council began putting in additions to the system, which we now understand to be the first versions of the rules for Visitants. Nimbats were allowed to venture out and bring someone into the Colony, and those who wandered in were not to be immediately pushed away if they were deemed harmless. As for the Matron? It’s hard to say what happened. She still had hundreds of years left in her lifespan, but she and her companion up and vanished. They never had any children, either. But, the Matron did not leave quietly. Runic messages were left for the Council, giving them encouragement to keep running the Colony and improving it, making it a haven not just for Nimbats, but those who aspired to see them thrive. She left in order to give this Colony a new identity, not controlled by a line of Matrons in her lineage, but shared and adored by the inhabitants that comprised it. The news of her disappearance was tragic, and some believed her lover had something to do with it for a time. Though, if that were the case, what was their ultimate aim? Anywho, the Colony saw further improvements and smaller changes over the years, and Council members were replaced as they were getting too old to continue managing their Flights. There is a small group dedicated to trying to find the Matron and their lover, but so far, nothing has turned up…</i></h5>
+            <div class="row">
+                <div class="col-md-8 offset-md-2">
+                    <h5 class="notes">"For this selection, I’m going to have my Advocate tell the tale of what this
+                        Colony was
+                        like and how it came to be."</h5>
+                    <hr>
+                    <h5><i>While the Colony’s very creation owes a lot to the first Council, a lot of the credit belongs
+                            to a Nimbat known as the Matron, since only a handful knew her actual name. Even today, most
+                            claims on her actual name are up for debate, if they’re not refutable! The Matron was a part
+                            of the Council as well, but she was a centralizing force, leading the very direction of the
+                            Colony while the Council managed their respective Flights. She had a variety of powers, but
+                            she specialized mostly in the raw energy of arcane, able to sear off an entire giant’s leg!
+                            Back then, our Colony was far more isolated, trying to stay hidden from the outside world as
+                            much as possible, save for the instance where a powerful artifact was found in some realm,
+                            and someone would need to be sent to either protect it, or collect it. Even though it was a
+                            pretty hidden Colony, the system worked, and everyone was able to thrive like we do today,
+                            for the most part.</i></h5>
+                    <h5><i>Except of course, there was no such thing as a Visitant. The issues came when a massive
+                            forest fire hit the surrounding region outside the Colony. The barriers and defenses set in
+                            place prevented anyone inside from getting harmed, but every so often an outsider would run
+                            straight into the barrier seeking shelter and refuge, and there was so much internal debate
+                            as to whether or not to help long-term. The Matron and the Council allowed others to take
+                            safety within the Colony until the flames were put to rest, but as soon as they were, the
+                            outsiders were expected to leave. Those fires didn’t subside until an entire week. People
+                            were learning what Nimbats were for the first time, and the Colony was beginning to warm up
+                            to them. The first one to break the barrier between those relations was, believe it or not,
+                            the Matron! All that’s known is that she was charmed by one of the outsiders after she
+                            personally saw to treating their injuries. They apparently hit it off, and they were proud
+                            to call themselves loving partners.
+                            At that point, there was no way the Colony could refuse outsiders anymore. The Council began
+                            putting in additions to the system, which we now understand to be the first versions of the
+                            rules for Visitants. Nimbats were allowed to venture out and bring someone into the Colony,
+                            and those who wandered in were not to be immediately pushed away if they were deemed
+                            harmless. As for the Matron? It’s hard to say what happened. She still had hundreds of years
+                            left in her lifespan, but she and her companion up and vanished. They never had any
+                            children, either. But, the Matron did not leave quietly. Runic messages were left for the
+                            Council, giving them encouragement to keep running the Colony and improving it, making it a
+                            haven not just for Nimbats, but those who aspired to see them thrive. She left in order to
+                            give this Colony a new identity, not controlled by a line of Matrons in her lineage, but
+                            shared and adored by the inhabitants that comprised it. The news of her disappearance was
+                            tragic, and some believed her lover had something to do with it for a time. Though, if that
+                            were the case, what was their ultimate aim? Anywho, the Colony saw further improvements and
+                            smaller changes over the years, and Council members were replaced as they were getting too
+                            old to continue managing their Flights. There is a small group dedicated to trying to find
+                            the Matron and their lover, but so far, nothing has turned up…
+                        </i></h5>
+                </div>
+            </div>
         </mat-card-content>
     </mat-card>
-    </div>
+</div>
