--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,8 @@
         </mat-card-title>
         <mat-card-content>
             <div class="row">
-                <h5 class="col-md-8 offset-md-2">Primarily from the notes of Nimbat researcher █████████, this site is an expository overview of the
+                <h5 class="col-md-8 offset-md-2">Primarily from the notes of Nimbat researcher █████████, this site is
+                    an expository overview of the
                     detailing on the Nimbat species’ physiology, their norms, and the Colony they reside in. There are
                     plenty of portions of the researcher’s field book that are relatively easy to read and decipher,
                     though
@@ -16,8 +17,10 @@
                     <span class="notes">personal notes</span>, detailing their specific interactions with certain parts
                     of the Colony itself.
                 </h5>
-                <h5 class="col-md-8 offset-md-2">Further information on lore development and usage can be found on the <a class="light-link" href="/">Logos and Lore Usage
-                    Guidelines</a> page.</h5>
+                <h5 class="col-md-8 offset-md-2">Further information on lore development and usage can be found on the
+                    <a class="light-link" href="/">Logos and Lore Usage
+                        Guidelines</a> page.
+                </h5>
             </div>
         </mat-card-content>
     </mat-card>
@@ -26,86 +29,88 @@
     <mat-card>
         <mat-card-title>
             <div class="row">
-            <h3>Patreon Supporters</h3></div>
+                <h3>Patreon Supporters</h3>
+            </div>
         </mat-card-title>
         <mat-card-subtitle>
             <div class="row">
-            <h5 class="col-md-8 offset-md-2">The NimbatColony.info project is a labor of passion, and we’re overjoyed to see our <a class="light-link" href="https://www.patreon.com/nimbatcolony">Patreon</a> supporters
-                aid us and cheer us on in the effort. If you’d like to be included and mentioned as one of these
-                supporters, please consider donating to our <a class="light-link" href="https://www.patreon.com/nimbatcolony">Patreon</a>!</h5>
+                <h5 class="col-md-8 offset-md-2">The NimbatColony.info project is a labor of passion, and we’re
+                    overjoyed to see our <a class="light-link" href="https://www.patreon.com/nimbatcolony">Patreon</a>
+                    supporters
+                    aid us and cheer us on in the effort. If you’d like to be included and mentioned as one of these
+                    supporters, please consider donating to our <a class="light-link"
+                        href="https://www.patreon.com/nimbatcolony">Patreon</a>!</h5>
             </div>
         </mat-card-subtitle>
         <mat-card-content>
             <div class="row">
-                <div class="col-md-12 align-self-center" style="text-align:center">
-                    <img style="width: 25%; height: auto;margin-top: 15px;margin-bottom: 15px"
-                        src="assets/bookends/devoted mark bookends title.png">
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col">
-                        <h4 style="text-align:center;">The Cat of Tens</h4>
+                <div class="col-md-8 offset-md-2">
+
+                    <div class="row">
+                        <div class="col-md-12 align-self-center" style="text-align:center">
+                            <h1><u>Devoted</u></h1>
+                        </div>
                     </div>
-                </div>
-            </div>
-            <mat-divider></mat-divider>
-            <div class="row">
-                <div class="col-md-12 align-self-center" style="text-align:center">
-                    <img style="width: 15%; height: auto;margin-top: 15px;margin-bottom: 15px"
-                        src="assets/bookends/loyal mark bookends title.png">
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col">
-                        <h4 style="text-align:end;">Sepa Ixen</h4>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col">
+                                <h4 style="text-align:center;">The Cat of Tens</h4>
+                            </div>
+                        </div>
                     </div>
-                    <div class="col">
-                        <h4 style="text-align:center;">Ermir</h4>
+                    <mat-divider></mat-divider>
+                    <div class="row">
+                        <div class="col-md-12 align-self-center" style="text-align:center">
+                            <h2><u>Loyal</u></h2>
+                        </div>
                     </div>
-                    <div class="col">
-                        <h4 style="text-align:center;">Artemis</h4>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col">
+                                <h5 style="text-align:center;">Sepa Ixen</h5>
+                            </div>
+                            <div class="col">
+                                <h5 style="text-align:center;">Ermir</h5>
+                            </div>
+                            <div class="col">
+                                <h5 style="text-align:center;">Artemis</h5>
+                            </div>
+                            <div class="col">
+                                <h5 style="text-align:center;">Glacialis</h5>
+                            </div>
+                            <div class="col">
+                                <h5 style="text-align:center;">MoonlightEV</h5>
+                            </div>
+                        </div>
                     </div>
-                    <div class="col">
-                        <h4 style="text-align:center;">Glacialis</h4>
+                    <mat-divider></mat-divider>
+                    <div class="row">
+                        <div class="col-md-12 align-self-center" style="text-align:center">
+                            <h3><u>Peon</u></h3>
+                        </div>
                     </div>
-                    <div class="col">
-                        <h4 style="text-align:start;">MoonlightEV</h4>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-12 align-self-center">
+                                <h6 style="text-align:center;">GamerFox</h6>
+                            </div>
+                        </div>
                     </div>
-                    <div class="col">
-                        <h4 style="text-align:start;">Taica</h4>
+                    <mat-divider></mat-divider>
+                    <div class="row">
+                        <div class="col-md-12 align-self-center" style="text-align:center">
+                            <h4><u>Visitant</u></h4>
+                        </div>
                     </div>
-                </div>
-            </div>
-            <mat-divider></mat-divider>
-            <div class="row">
-                <div class="col-md-12 align-self-center" style="text-align:center">
-                    <img style="width: 10%; height: auto;margin-top: 15px;margin-bottom: 15px"
-                        src="assets/bookends/peon mark bookends title.png">
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12 align-self-center">
-                        <h5 style="text-align:center;">GamerFox</h5>
+                    <div class="row">
+                        <div class="col">
+                            <div style="text-align:center;">Ares Tyler Lynx</div>
+                        </div>
+                        <div class="col">
+                            <div style="text-align:center;">Ranger_Savage</div>
+                        </div>
                     </div>
-                </div>
-            </div>
-            <mat-divider></mat-divider>
-            <div class="row">
-                <div class="col-md-12 align-self-center" style="text-align:center">
-                    <img style="width: 5%; height: auto;margin-top: 15px;margin-bottom: 15px"
-                        src="assets/bookends/visitant bookend.png">
-                </div>
-            </div>
-            <mat-divider></mat-divider>
-            <div class="row">
-                <div class="col">
-                    <h6 style="text-align:center;">Ares Tyler Lynx</h6>
-                </div>
-                <div class="col">
-                    <h6 style="text-align:center;">Ranger_Savage</h6>
+                    <mat-divider></mat-divider>
                 </div>
             </div>
         </mat-card-content>
