--- a/src/app/taxonomy/taxonomy.component.html
+++ b/src/app/taxonomy/taxonomy.component.html
@@ -1,30 +1,55 @@
 <div class="container-fluid">
     <mat-card>
-        <mat-card-title><h3>Nimbat Taxonomy</h3></mat-card-title>
+        <mat-card-title>
+            <h3>Nimbat Taxonomy</h3>
+        </mat-card-title>
         <mat-card-content>
-            <h5>Nimbats are small, winged, felid-like creatures. They can grow to be anywhere between 1 to 4 feet tall,
-                from base of the foot to tip of the ear. Their wingspans are composed of a membranous tissue, similar to
-                bats. They tend to be proportionate to their bodies by other species' standards. They have a total of
-                seven appendages- Two arms, two legs, two wings, and a tail. There are 4-5 fingers on each hand, and 3-4
-                toes on each foot. Paw pads akin to cats exist on the bottoms of their feet, and the palms of their
-                hands. Their ears are tall and wide. Nimbats tend to live for a very long time; while they develop
-                similar to humans when it comes to maturation cycles, their actual lifespan has an unknowable length.
-            </h5>
-            <h5 class="notes">
-                "I’ve personally met a number of self-proclaimed millennia-old Nimbats, who don’t seem to be much
-                physically older than those who have been alive for no more than 20 years. I’m unsure if I’ll ever know
-                exactly how they work, as Nimbats seem to “dissolve” once they pass away, making dissection practically
-                impossible."</h5>
+            <div class="row">
+                <div class="col-md-8 offset-md-2">
+                    <h5>Nimbats (scientific name Pterofelis Dodrili), are small, winged, felid-like creatures. They can
+                        grow to be anywhere between one (1) to four (4) feet tall, from base of the foot to tip of the
+                        ear. Their wings are composed of a membranous tissue, similar to bats (genus Chiroptera). They
+                        tend to be proportionate to their bodies by other bipedal species' standards. They are born with
+                        a total of seven (7) appendages- Two (2) arms, two (2) legs, two (2) wings, and a tail. There
+                        are four (4) to five (5) fingers on each hand, and three (3) to four (4) toes on each foot. Paw
+                        pads akin to cats exist on the bottoms of their toes, and the tips of their fingers. Their ears
+                        are tall and wide. Nimbats tend to live for a very long time; while they develop similar to
+                        humans when it comes to maturation cycles, their actual lifespan has an unknowable length.</h5>
 
-            <h5>
-                Their eyes are most often pupil-less, a convex “sparkly” iridescent iris instead fills the eye. It tends
-                to consist of a gradient of color, from anywhere from blue, to green, to red. This doesn’t mean they’re
-                blind, they seem to be completely aware of all visual stimuli, and are able to navigate well.
-            </h5>
-            <h5>Additionally, Nimbats who happen to lose parts of their bodies report that their lost parts sparkle and
-                dissolve into the air, and the body that is left behind begins to heal immediately, slowly sealing the
-                wound and stopping blood from escaping. However, they’re unable to regrow limbs, and often turn to magic
-                to augment themselves if they find themselves in that situation.</h5>
+                    <hr>
+                    <h5 class="notes">
+                        "I’ve personally met a number of self-proclaimed millennia-old Nimbats, who don’t seem to be
+                        much
+                        physically older than those who have been alive for no more than 20 years. I’m unsure if I’ll
+                        ever
+                        know
+                        exactly how they work, as Nimbats seem to “dissolve” once they pass away, making dissection
+                        practically
+                        impossible."</h5>
+                    <hr>
+                    <h5>Their eyes can be generalized into three distinct “types”. One of which is pupil and iris-less,
+                        and
+                        a convex “sparkly” iridescent cornea instead fills the eye. It tends to consist of a gradient of
+                        color, from anywhere from blue, to green, to red. Another has a distinctive separate iris and
+                        cornea, the iris tending to be a shade of the cornea. The third and final is what would be
+                        considered a “typical” eye, with cornea, iris, and pupil all separate. No matter the eye type,
+                        no
+                        nimbats are defaultly blind. They seem to be completely aware of all visual stimuli, and are
+                        able to
+                        navigate well.</h5>
+                    <h5>Additionally, Nimbats who happen to lose parts of their bodies report that their lost parts
+                        sparkle
+                        and dissolve into the air, and the body that is left behind begins to heal immediately, quickly
+                        sealing the wound and stopping blood from escaping. However, they are unable to regrow limbs,
+                        and
+                        often turn to magic to augment themselves if they find themselves in that situation.
+                    </h5>
+                    <h5>Nimbats are creatures with an inherent arcane or magical ability. A vast majority have been
+                        observed
+                        to display these abilities on a regular basis. More information can be found <a href="magical-capabilities"
+                            class="light-link">here</a>.</h5>
+                </div>
+            </div>
         </mat-card-content>
     </mat-card>
 </div>
