--- a/src/app/visitants/visitants.component.html
+++ b/src/app/visitants/visitants.component.html
@@ -4,27 +4,48 @@
             <h3>Visitants</h3>
         </mat-card-title>
         <mat-card-content>
-            <hr>
-            <h5>There are other non-Nimbats that are a part of the Colony. Visitants span the gender spectrum, and the
-                interviewed Visitants have been about the Colony for a wide array of time. Some have merely visited and
-                left intermittently, while others have resided here much longer than I have. It seems that a strong
-                pillar of Nimbat ideology is the introduction and potential incorporation of others into the Colony.
-                When a Nimbat goes out into the world and finds someone that catches their interests, they may escort
-                them back to the Colony itself.</h5>
-            <h5 class="notes">"A number of other Nimbats refer to the one who brings a non-Nimbat here as an “Advocate”,
-                and said non-Nimbats like myself are their “Visitant”. My own Advocate, ██████, told me about how
-                they’re responsible for my actions. If a Visitant has ill-natured intentions or practices malice in the
-                Colony, they are exiled, and the Advocate faces some repercussions. They wouldn’t tell me the details."
-            </h5>
-            <h5>Upon arrival, the Advocate escorts the Visitant to at least one Council member to introduce them
-                personally while the rest are introduced by secondary means. Many Visitants come only for a few days,
-                and choose to leave. However, there are a few that choose to stay. Upon that decision, the Advocate
-                begins a ritual to fully accept them into the Colony. Visitants are free to do as they wish so long that
-                it assists the Colony, and most choose to join a Flight to work what is close to a traditional job.
-                These can be anything from assisting with construction or hauling (which is quite useful, since Nimbats
-                do tend to be of shorter stature) to recordkeeping. Nimbats are often seen fraternizing with Visitants,
-                including the Visitants of other Advocates. It seems they quickly become part of the colony
-                itself.</h5>
+            <div class="row">
+                <div class="col-md-8 offset-md-2">
+                    <h5>There are other non-Nimbats that have integrated into Colony society entirely. Visitants span
+                        the gender
+                        spectrum, and the interviewed Visitants have been about the Colony for a wide array of time.
+                        Some have
+                        merely visited and left intermittently, while others have resided there for a much longer time.
+                        It seems
+                        that a strong pillar of Nimbat ideology is the introduction and potential incorporation of
+                        others into
+                        the Colony. When a Nimbat goes out into the world and finds someone that catches their
+                        interests, they
+                        may escort them back to the Colony itself.</h5>
+                    <hr>
+                    <h5 class="notes">“There exists a kind of nomenclature for the variety of individuals that visit the
+                        Colony
+                        space, and it comes in the form of a categorizing nomenclature. There are Advocates, and there
+                        are
+                        Visitants. It seems I take on the mantle of Visitant, just like those before me, stepping past
+                        the
+                        Colony boundaries and mingling with its makeup. The Nimbat who brought me here, a certain
+                        ██████, is
+                        thereby the Advocate.”
+                    </h5>
+                    <hr>
+                    <h5>Upon arrival, the Advocate escorts the Visitant to at least one Council member to introduce them
+                        personally while the rest are introduced by secondary means. Many Visitants come only for a few
+                        days,
+                        and choose to leave. However, there are a few that choose to stay. While Visitants generally
+                        have some
+                        free reign in the Colony, their open status hinges on their capability to actually aid the
+                        goings-on
+                        within. While even the least magically-inclined Nimbat can be quite resourceful, the insight (or
+                        sometimes the physical advantages) from individuals outside of the Colony can wind up being
+                        highly
+                        appreciated for different tasks. Intercultural mingling is also encouraged, as it is not
+                        uncommon to
+                        find Visitants and Nimbats fraternizing. It is not unheard of for Visitants to have taken up
+                        residence
+                        within the Colony, either. </h5>
+                </div>
+            </div>
         </mat-card-content>
     </mat-card>
 </div>
